fix: change product photo width to auto on tablet varsion

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ button {
 }
 @media screen and (min-width: 48rem) {
   .product-photo {
-    width: 27rem;
+    width: auto;
     height: 36rem;
   }
 }
